[gd_scene load_steps=4 format=3 uid="uid://c0viexdtky2af"]

[ext_resource type="Script" path="res://WIP/head_selector.gd" id="1_ues8a"]
[ext_resource type="PackedScene" uid="uid://bu83415gv54iu" path="res://WIP/hold_button_external.tscn" id="2_d1eso"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mla2p"]

[node name="HeadSelector" type="Node3D"]
script = ExtResource("1_ues8a")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]

[node name="RayCast3D" type="RayCast3D" parent="XROrigin3D/XRCamera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -1.5, 0)
collision_mask = 1048576
collide_with_areas = true
collide_with_bodies = false

[node name="Options" type="Node3D" parent="."]

[node name="OptionALabel" type="Label3D" parent="Options"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0, -1.5)
text = "Option A
"

[node name="HoldButtonA" parent="Options/OptionALabel" instance=ExtResource("2_d1eso")]
activate_action = "ax_button"

[node name="Area3DA" type="Area3D" parent="Options/OptionALabel"]
collision_layer = 1048576

[node name="CollisionShape3D" type="CollisionShape3D" parent="Options/OptionALabel/Area3DA"]
shape = SubResource("SphereShape3D_mla2p")

[node name="OptionBLabel" type="Label3D" parent="Options"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0, -1.5)
text = "Option B
"

[node name="HoldButtonB" parent="Options/OptionBLabel" instance=ExtResource("2_d1eso")]
activate_action = "by_button"

[node name="Area3DB" type="Area3D" parent="Options/OptionBLabel"]
collision_layer = 1048576

[node name="CollisionShape3D" type="CollisionShape3D" parent="Options/OptionBLabel/Area3DB"]
shape = SubResource("SphereShape3D_mla2p")

[connection signal="pressed" from="Options/OptionALabel/HoldButtonA" to="." method="_on_hold_button_a_pressed"]
[connection signal="pressed" from="Options/OptionBLabel/HoldButtonB" to="." method="_on_hold_button_b_pressed"]
